Rearrange regionlinks and quizbox components Moved quizbox and regionlinks to top right corner as previous layout obstructed top center of the map, and changed view of radio buttons in quizbox to column format. Removed geography element NW of Australia (Ashmore Reef) to prevent extra country label on correct guesses. Changed center points on regionmapconfig to shift countries further upward to reduce negative space.

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@
 
 .App-quiz {
   position: absolute;
+  top: 1em;
+  right: 3em;
   top: calc(150px + 3em);
   left: 50%;
   transform: translateX(-50%);
@@ -63,4 +65,12 @@ footer {
   to {
     opacity: 1;
   }
+}
+
+.regionButtons {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  display: flex;
+  flex-direction: column;
 }
